Fix table width on iOS

--- a/source/stylesheets/components/_price_table.scss
+++ b/source/stylesheets/components/_price_table.scss
@@ -5,6 +5,7 @@
   }
   grid-area: table;
   margin-bottom: 0;
+  width: 100%;
 
   tr {
     border-bottom: 1px solid $color-gray;
